crates/ruff_python_parser/tests/snapshots/invalid_syntax@try_stmt_misspelled_except.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/try_stmt_misspelled_except.py
---
## AST

```
Module(
    ModModule {
        range: 0..165,
        body: [
            Try(
                StmtTry {
                    range: 0..13,
                    body: [
                        Pass(
                            StmtPass {
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 14..20,
                    target: Name(
                        ExprName {
                            range: 14..19,
                            id: Name("exept"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 20..20,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            Pass(
                StmtPass {
                    range: 54..58,
                },
            ),
            Pass(
                StmtPass {
                    range: 72..76,
                },
            ),
            Assign(
                StmtAssign {
                    range: 77..82,
                    targets: [
                        Name(
                            ExprName {
                                range: 77..78,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            range: 81..82,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Try(
                StmtTry {
                    range: 83..113,
                    body: [
                        Pass(
                            StmtPass {
                                range: 92..96,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 97..113,
                                type_: None,
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            range: 109..113,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 114..120,
                    target: Name(
                        ExprName {
                            range: 114..119,
                            id: Name("exept"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 120..120,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            Pass(
                StmtPass {
                    range: 154..158,
                },
            ),
            Assign(
                StmtAssign {
                    range: 159..164,
                    targets: [
                        Name(
                            ExprName {
                                range: 159..160,
                                id: Name("b"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            range: 163..164,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
1 | try:
2 |     pass
3 | exept:  # spellchecker:disable-line
  | ^^^^^ Expected `except` or `finally` after `try` block
4 |     pass
5 | finally:
  |


error: Invalid syntax
  |
1 | try:
2 |     pass
3 | exept:  # spellchecker:disable-line
  |                                    ^ Expected an expression
4 |     pass
5 | finally:
6 |     pass
  |


error: Invalid syntax
  |
2 |     pass
3 | exept:  # spellchecker:disable-line
4 |     pass
  | ^^^^ Unexpected indentation
5 | finally:
6 |     pass
  |


error: Invalid syntax
  |
3 | exept:  # spellchecker:disable-line
4 |     pass
5 | finally:
  | ^ Expected a statement
6 |     pass
7 | a = 1
  |


error: Invalid syntax
  |
3 | exept:  # spellchecker:disable-line
4 |     pass
5 | finally:
  |        ^ Expected a statement
6 |     pass
7 | a = 1
  |


error: Invalid syntax
  |
3 | exept:  # spellchecker:disable-line
4 |     pass
5 | finally:
  |         ^ Expected a statement
6 |     pass
7 | a = 1
8 | try:
  |


error: Invalid syntax
  |
4 |     pass
5 | finally:
6 |     pass
  | ^^^^ Unexpected indentation
7 | a = 1
8 | try:
  |


error: Invalid syntax
  |
5 | finally:
6 |     pass
7 | a = 1
  | ^ Expected a statement
8 | try:
9 |     pass
  |


error: Invalid syntax
   |
10 | except:
11 |     pass
12 | exept:  # spellchecker:disable-line
   |                                    ^ Expected an expression
13 |     pass
14 | b = 1
   |


error: Invalid syntax
   |
11 |     pass
12 | exept:  # spellchecker:disable-line
13 |     pass
   | ^^^^ Unexpected indentation
14 | b = 1
   |


error: Invalid syntax
   |
12 | exept:  # spellchecker:disable-line
13 |     pass
14 | b = 1
   | ^ Expected a statement
   |
